--- a/curso/HTML5/styles.css
+++ b/curso/HTML5/styles.css
@@ -1,9 +1,10 @@
 h1 { /*USE PARA INSERIR FORMATAÇÃO EM TODOS OS TEXTOS H1*/
 
-    color: rgb(41, 114, 41);  /*INSERIR COR NA LETRA */
+    color: rgb(207, 115, 28);  /*INSERIR COR NA LETRA */
     font-size: 50px; /*AUMENTAR A FONTE EM PIXELS*/
     background-color: aqua; /*INSERIR FUNDO NA PALAVRA*/
     font-weight: 900; 
+    font-family: Arial, Helvetica, sans-serif;/*INSERIR FONTE DE FORMATAÇÃO*/
 
 }
 
